GN-14 Fix mobile nav not showing for Pathways

--- a/src/Header/Nav/SubNav/SubNav.module.scss
+++ b/src/Header/Nav/SubNav/SubNav.module.scss
@@ -7,9 +7,13 @@
 }
 
 .list {
-  list-style: none;
   margin: 0;
   padding: 0;
+
+  li {
+    list-style: none;
+    margin: 0;
+  }
 }
 
 .link {
